# planquest

./: .env.example  .env.production.example  .gitignore  Makefile  README.md  ai-architecture.md  cold-start-plan.md  docker-compose.prod.yml  docker-compose.yml  documend.md  savol.md  task01.md  task02.md  task03.md  task04.md  task05.md  task06.md  task08.md  task09.md  tasks.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0c2e1a21f108_create_xp_events_and_user_progress.py  1d32740f7ed6_create_tasks_table.py  1de457736067_create_habits_and_habit_logs.py  30c1d2cf0c4b_add_wallet_and_inventory.py  6c28e2b1056d_add_ai_request_logs.py  83a9a53f9434_add_user_profiling_fields.py  84e781a3f532_add_goals_table.py  86380e609bea_add_chests_table.py  b6e550186292_add_achievements_tables.py  b793afde22b0_add_missions_table.py  cba124f19390_add_referrals_table.py  f08406cf6079_create_focus_sessions_table.py  f103f53202a7_create_users_and_user_settings.py  fc39aeeb978e_create_streaks_table.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/bot/: setup.py
backend/app/core/: bot.py  celery_app.py  database.py  events.py  rate_limit.py  redis.py  security.py
backend/app/models/: __init__.py  achievement.py  base.py  chest.py  focus_session.py  goal.py  habit.py  mission.py  referral.py  streak.py  task.py  user.py  user_progress.py  user_settings.py  wallet.py  xp_event.py
backend/app/schemas/: achievement.py  auth.py  chest.py  focus.py  goal.py  habit.py  mission.py  (+5 more)
backend/tests/: test_auth.py  test_health.py
(+117 files in other folders)
